vaal-sys/vaal.h


typedef struct nn_context NNContext;
typedef struct nn_tensor NNTensor;
typedef void NNModel;
#define VAAL_DEVICE_CPU "cpu"
#define VAAL_DEVICE_GPU "gpu"
#define VAAL_DEVICE_NPU "npu"
typedef enum {
    VAAL_SUCCESS = 0,
    VAAL_ERROR_INTERNAL,
    VAAL_ERROR_INVALID_HANDLE,
    VAAL_ERROR_OUT_OF_MEMORY,
    VAAL_ERROR_OUT_OF_RESOURCES,
    VAAL_ERROR_NOT_IMPLEMENTED,
    VAAL_ERROR_INVALID_PARAMETER,
    VAAL_ERROR_TYPE_MISMATCH,
    VAAL_ERROR_SHAPE_MISMATCH,
    VAAL_ERROR_INVALID_SHAPE,
    VAAL_ERROR_INVALID_ORDER,
    VAAL_ERROR_INVALID_AXIS,
    VAAL_ERROR_MISSING_RESOURCE,
    VAAL_ERROR_INVALID_ENGINE,
    VAAL_ERROR_TENSOR_NO_DATA,
    VAAL_ERROR_KERNEL_MISSING,
    VAAL_ERROR_TENSOR_TYPE_UNSUPPORTED,
    VAAL_ERROR_TOO_MANY_INPUTS,
    VAAL_ERROR_SYSTEM_ERROR,
    VAAL_ERROR_INVALID_LAYER,
    VAAL_ERROR_MODEL_INVALID,
    VAAL_ERROR_MODEL_MISSING,
    VAAL_ERROR_STRING_TOO_LARGE,
    VAAL_ERROR_INVALID_QUANT,
    VAAL_ERROR_MODEL_GRAPH_FAILED,
    VAAL_ERROR_GRAPH_VERIFY_FAILED,
    VAAL_ERROR_UNKNOWN_DECODER = 0x10000,
    VAAL_ERROR_PARAMETER_READ_ONLY,
    VAAL_ERROR_PARAMETER_NOT_FOUND,
    VAAL_ERROR_PLATFORM_UNSUPPORTED,
    VAAL_ERROR_LIBRARY_UNINITIALIZED,
} VAALError;
typedef enum {
    VAAL_RAW = 0,
    VAAL_PTR,
    VAAL_FUNC,
    VAAL_STR,
    VAAL_I8,
    VAAL_U8,
    VAAL_I16,
    VAAL_U16,
    VAAL_I32,
    VAAL_U32,
    VAAL_I64,
    VAAL_U64,
    VAAL_F16,
    VAAL_F32,
    VAAL_F64,
} VAALType;
typedef struct vaal_context VAALContext;
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
const char*
vaal_version(int* major, int* minor, int* patch, const char** extra);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
const char*
vaal_strerror(VAALError error);
VAAL_AVAILABLE_SINCE_1_1
VAAL_API
size_t
vaal_type_sizeof(VAALType type);
VAAL_AVAILABLE_SINCE_1_1
VAAL_API
const char*
vaal_type_name(VAALType type);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
int64_t
vaal_clock_now();
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
VAALContext*
vaal_context_create(const char* device);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
void
vaal_context_release(VAALContext* context);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
NNContext*
vaal_context_deepviewrt(VAALContext* context);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
NNTensor*
vaal_context_cache(VAALContext* context);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
void*
vaal_context_dict(VAALContext* context);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
void*
vaal_context_model(VAALContext* context);
VAAL_AVAILABLE_SINCE_1_1
VAAL_API
size_t
vaal_parameter_count(VAALContext* context);
VAAL_AVAILABLE_SINCE_1_1
VAAL_API
VAALError
vaal_parameter_name(VAALContext* context,
                    size_t       index,
                    char*        name,
                    size_t       max_name,
                    size_t*      name_length);
VAAL_AVAILABLE_SINCE_1_1
VAAL_API
VAALError
vaal_parameter_info(VAALContext* context,
                    const char*  name,
                    VAALType*    type,
                    size_t*      length,
                    int*         readonly);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
VAALError
vaal_parameter_gets(VAALContext* context,
                    const char*  name,
                    char*        value,
                    size_t       max_value,
                    size_t*      length);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
VAALError
vaal_parameter_sets(VAALContext* context,
                    const char*  name,
                    const char*  value,
                    size_t       length);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
VAALError
vaal_parameter_getf(VAALContext* context,
                    const char*  name,
                    float*       values,
                    size_t       max_values,
                    size_t*      num_values);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
VAALError
vaal_parameter_setf(VAALContext* context,
                    const char*  name,
                    const float* values,
                    size_t       num_values);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
VAALError
vaal_parameter_geti(VAALContext* context,
                    const char*  name,
                    int32_t*     values,
                    size_t       max_values,
                    size_t*      num_values);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
VAALError
vaal_parameter_seti(VAALContext*   context,
                    const char*    name,
                    const int32_t* values,
                    size_t         num_values);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
VAALError
vaal_parameter_getu(VAALContext* context,
                    const char*  name,
                    uint32_t*    values,
                    size_t       max_values,
                    size_t*      num_values);
VAAL_AVAILABLE_SINCE_1_1
VAAL_API
VAALError
vaal_load_model(VAALContext* context, size_t memory_size, const void* memory);