vaal-sys/src/ffi.rs

#[doc = " @struct VAALContext\n\n Context object for VAAL to manage internal model data structures.  The\n VAALContext manages the DeepViewRT NNContext as well as parameters related\n to model post-processing.\n\n Models typically require further post-processing before the outputs are\n ready to be interpreted.  What post-processing is required varies greatly\n between various model architectures. A common post-processing step is the\n decoder which is responsible for translating an internal model representation\n into one which represents the problem space.\n\n For detection models the post-processing includes the box decoding step which\n can either be integrated into the model or run as a separate step using the\n model's outputs followed by sorting and non-maximum supression \"NMS\" which is\n tasked with cleaning the bounding box output.\n\n For classification models the post-processing is typically implemented by\n finding within an output vector the index of the maximum value \"argmax\" where\n the index has meaning. For example, the index into the labels with which the\n classifier was trained. The value itself can also be interpreted as a weak\n confidence metric in cases where a softmax or sigmoid was applied to the\n vector."]
pub type VAALContext = vaal_context;
extern "C" {
    #[doc = " DeepView VAAL library version as MAJOR.MINOR.PATCH.  The library returns\n a string encoding the version and also optionally sets the provided\n arguments.\n\n @return library version string\n\n @since 1.0"]
    pub fn vaal_version(
        major: *mut ::std::os::raw::c_int,
        minor: *mut ::std::os::raw::c_int,
        patch: *mut ::std::os::raw::c_int,
        extra: *mut *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " DeepView VAAL string encoding of error enum\n\n @return error string\n\n @since 1.0"]
    pub fn vaal_strerror(error: VAALError) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Returns the size of the @ref VAALType in bytes.  Note that VAAL parameters\n can be arrays of types, so a full buffer would be length * vaal_type_sizeof.\n\n @returns element size of the @ref VAALType.\n\n @since 1.1"]
    pub fn vaal_type_sizeof(type_: VAALType) -> usize;
}
extern "C" {
    #[doc = " Returns the string name for the @ref VAALType.\n\n @param type to be returned as a string name.\n\n @returns string representation of the type.\n\n @since 1.1"]
    pub fn vaal_type_name(type_: VAALType) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Returns the current monotonic time in nanoseconds.\n\n @return monotonic time as nanoseconds\n\n @since 1.0"]
    pub fn vaal_clock_now() -> i64;
}
extern "C" {
    #[doc = " Creates a VAALContext for the provided device.  A context can manage a single\n model but many contexts can be created within an application.  If device is\n NULL then the default DeepViewRT engine will be used which evaluates models\n on the CPU.\n\n The device string can be further extended to specify device details such as\n using \"gpu:1\" to use the second GPU instead of the default one.  Refer to the\n VAAL_DEVICE documentation for details on the extended parameters.\n\n Supported devices:\n  - @ref VAAL_DEVICE_CPU\n  - @ref VAAL_DEVICE_GPU\n  - @ref VAAL_DEVICE_NPU\n\n @param device\n\n @return VAALContext\n\n @since 1.0"]
    pub fn vaal_context_create(device: *const ::std::os::raw::c_char) -> *mut VAALContext;
}
extern "C" {
    #[doc = " Releases the VAALContext unloading models and releasing any data structures\n under the control of the context.\n\n\n @since 1.0"]
    pub fn vaal_context_release(context: *mut VAALContext);
}
extern "C" {
    #[doc = " Retrieves the DeepViewRT NNContext associated with the VAALContext.  This can\n be used to further query the underlying NNEngine, NNModel, and other\n DeepViewRT API.\n\n @param context\n\n @return NNContext\n\n @since 1.0"]
    pub fn vaal_context_deepviewrt(context: *mut VAALContext) -> *mut NNContext;
}
extern "C" {
    #[doc = " Retrieves the cache tensor associated with VAAL context.\n Cache is used for post-processing and CPU inference\n\n @param context\n\n @return NNTensor\n\n @since 1.0"]
    pub fn vaal_context_cache(context: *mut VAALContext) -> *mut NNTensor;
}
extern "C" {
    #[doc = " Retrieves the dictionary data struct associated with the VAALContext.\n\n @param context\n\n @return NNContext\n @private\n @since 1.0"]
    pub fn vaal_context_dict(context: *mut VAALContext) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[doc = " Retrieves the model associated with the VAALContext.\n\n @param context\n\n @return NNContext\n\n @since 1.0"]
    pub fn vaal_context_model(context: *mut VAALContext) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[doc = " Queries the number of available parameters in the current context.  The count\n can be used along with @vaal_parameter_name() to query the names of the\n parameters.\n\n You should have a model loaded using @ref vaal_load_model before calling this\n function to ensure all available parameters are provided.\n\n The available parameters vary depending on model and target harwdware as\n documented in the VAAL User's Manual (TODO: need to document parameters).\n\n @return number of currently available parameters for the context.\n\n @since 1.1"]
    pub fn vaal_parameter_count(context: *mut VAALContext) -> usize;
}
extern "C" {
    #[doc = " Queries the names of parameters according to the index.  Note the indices\n are not deterministic and will vary depending on the state of the context.\n This function is meant to be used to lookup currently available parameter\n names.\n\n @return VAALError\n\n @since 1.1"]
    pub fn vaal_parameter_name(
        context: *mut VAALContext,
        index: usize,
        name: *mut ::std::os::raw::c_char,
        max_name: usize,
        name_length: *mut usize,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Queries the parameter for information about the type, length, and mutability.\n\n @param context\n @param name Parameter name as found using @ref vaal_parameter_query\n @param type Optional pointer to receive the parameter data type.\n @param length Optional pointer to receive the length of the parameter. The\n               length is measured in number of elements.  The total length can\n               be calculated by multiplying with @ref vaal_type_sizeof().\n @param readonly Optional pointer to receive the mutability of the parameter.\n                 If readonly=1 then the parameter is immutable and attempts to\n                 set a new value will return the error code\n                 @ref VAAL_ERROR_PARAMETER_READ_ONLY.\n\n @return VAALType\n\n @since 1.1"]
    pub fn vaal_parameter_info(
        context: *mut VAALContext,
        name: *const ::std::os::raw::c_char,
        type_: *mut VAALType,
        length: *mut usize,
        readonly: *mut ::std::os::raw::c_int,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Reads the current value as a string for the parameter into the user provided\n string buffer.  It can be called with max_value of 0 or value of NULL to\n query the required storage size.  If length is non-NULL then the total size\n of the string representation will be stored, even if the actual result was\n truncated.\n\n @param context\n @param name Parameter name as found using @ref vaal_parameter_query\n @param value Buffer to receive the string representation of the value\n @param max_value Size of the value buffer\n @param length Total length of the string representation of the value\n\n @return VAALError\n\n @since 1.0"]
    pub fn vaal_parameter_gets(
        context: *mut VAALContext,
        name: *const ::std::os::raw::c_char,
        value: *mut ::std::os::raw::c_char,
        max_value: usize,
        length: *mut usize,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Writes the provided value into the parameter.  The value is provided as a\n string representation.\n\n @param context\n @param name Parameter name as found using @ref vaal_parameter_query\n @param value String representation of the new value for the parameter\n @param length Optional length of string, if left out will use strlen(value)+1\n\n @return VAALError\n\n @since 1.0"]
    pub fn vaal_parameter_sets(
        context: *mut VAALContext,
        name: *const ::std::os::raw::c_char,
        value: *const ::std::os::raw::c_char,
        length: usize,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Read the float values for a given \"name\" key in the context. It can be a\n scalar value or an array.\n\n @param context\n @param name Parameter name as found using @ref vaal_parameter_query\n @param values pointer to the returned float value(s)\n @param max_values length of the values array\n @param num_values number of actual values in the parameter\n\n @return VAALError\n\n @since 1.0"]
    pub fn vaal_parameter_getf(
        context: *mut VAALContext,
        name: *const ::std::os::raw::c_char,
        values: *mut f32,
        max_values: usize,
        num_values: *mut usize,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Writes the provided value into the parameter.  The value is provided as a\n float array representation.\n\n @param context\n @param name Parameter name as found using @ref vaal_parameter_query\n @param values address of the first float value\n @param num_values length of the input float array\n\n @return VAALError\n\n @since 1.0"]
    pub fn vaal_parameter_setf(
        context: *mut VAALContext,
        name: *const ::std::os::raw::c_char,
        values: *const f32,
        num_values: usize,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Read the int values for a given \"name\" key in the context. It can be a\n scalar or an array.\n\n @param context\n @param name Parameter name as found using @ref vaal_parameter_query\n @param values pointer to the returned int values\n @param max_values size of the values array\n @param num_values number of actual values in the parameter\n\n @return VAALError\n\n @since 1.0"]
    pub fn vaal_parameter_geti(
        context: *mut VAALContext,
        name: *const ::std::os::raw::c_char,
        values: *mut i32,
        max_values: usize,
        num_values: *mut usize,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Writes the provided value into the parameter.  The value is provided as a\n int array representation.\n\n @param context\n @param name Parameter name as found using @ref vaal_parameter_query\n @param value address of the first int value\n @param len length of the input int array\n\n @return VAALError\n\n @since 1.0"]
    pub fn vaal_parameter_seti(
        context: *mut VAALContext,
        name: *const ::std::os::raw::c_char,
        values: *const i32,
        num_values: usize,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Read the int values for a given \"name\" key in the context. It can be a\n scalar or an array.\n\n @param context\n @param name Parameter name as found using @ref vaal_parameter_query\n @param values pointer to the returned uint32_t values\n @param max_salues length of the values array\n @param num_values number of actual values in the parameter\n\n @return VAALError\n\n @since 1.0"]
    pub fn vaal_parameter_getu(
        context: *mut VAALContext,
        name: *const ::std::os::raw::c_char,
        values: *mut u32,
        max_values: usize,
        num_values: *mut usize,
    ) -> VAALError;
}
